<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/frag_fiiList"
        android:icon="@drawable/ic_home"
        android:orderInCategory="1"
        android:title="@string/menu_item_home"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/frag_filtros"
        android:icon="@drawable/ic_baseline_filter_alt_24"
        android:orderInCategory="2"
        android:title="@string/menu_item_filter"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/frag_sortBy"
        android:icon="@drawable/ic_sortby"
        android:orderInCategory="3"
        android:title="@string/menu_item_sortby"
        app:showAsAction="always|withText" />

<!--    <item-->
<!--        android:id="@+id/app_bar_sortorder"-->
<!--        android:icon="@drawable/ic_baseline_sort_24"-->
<!--        android:orderInCategory="5"-->
<!--        android:title="Asc / Desc"-->
<!--        app:showAsAction="always|withText" />-->

<!--    <item-->
<!--        android:id="@+id/app_bar_favorites"-->
<!--        android:icon="@drawable/ic_star_outline"-->
<!--        android:orderInCategory="3"-->
<!--        android:title="Favoritos"-->
<!--        app:showAsAction="always|withText" />-->

</menu>