<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:orderInCategory="1"
        android:title="@string/menu_item_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="collapseActionView|always" />

<!--    <item-->
<!--        android:id="@+id/frag_filtros"-->
<!--        android:icon="@drawable/ic_baseline_filter_alt_24"-->
<!--        android:orderInCategory="2"-->
<!--        android:title="Filtrar"-->
<!--        app:showAsAction="ifRoom" />-->

<!--    <item-->
<!--        android:id="@+id/frag_sortBy"-->
<!--        android:icon="@drawable/ic_baseline_sort_24"-->
<!--        android:orderInCategory="4"-->
<!--        android:title="Ordenar Por"-->
<!--        app:showAsAction="ifRoom" />-->

    <item
        android:id="@+id/app_bar_sortorder"
        android:icon="@drawable/ic_sort_asc"
        android:orderInCategory="3"
        android:title="@string/menu_item_sortAsc"
        app:showAsAction="always" />

    <item
        android:id="@+id/app_bar_favorites"
        android:icon="@drawable/ic_star_outline"
        android:orderInCategory="2"
        android:title="@string/menu_item_favorites"
        app:showAsAction="always" />

</menu>