<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.android.fiiapp.util.MyStringUtils" alias="mf"/>

        <variable
            name="viewmodel"
            type="com.android.fiiapp.filter.FilterViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.android.fiiapp.filter.Filtros">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_setores" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_setores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:data="@{viewmodel.sectors}"
                app:layoutManager="LinearLayoutManager" />

            <!-- PL -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fii_param_pl" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:maxWidth="50dp"
                    android:inputType="numberDecimal"
                    android:hint="@{mf.d2c(viewmodel.pl_limits.min)}"
                    android:text="@={viewmodel.pl.min}"
                    android:importantForAutofill="no" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/filter_range_to" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:maxWidth="50dp"
                    android:inputType="numberDecimal"
                    android:hint="@{mf.d2c(viewmodel.pl_limits.max)}"
                    android:text="@={viewmodel.pl.max}"
                    android:importantForAutofill="no" />

            </LinearLayout>

            <!-- Price -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fii_param_preco" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:maxWidth="50dp"
                    android:inputType="numberDecimal"
                    android:hint="@{mf.d2c(viewmodel.price_limits.min)}"
                    android:text="@={viewmodel.price.min}"
                    android:importantForAutofill="no" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/filter_range_to" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:maxWidth="50dp"
                    android:inputType="numberDecimal"
                    android:hint="@{mf.d2c(viewmodel.price_limits.max)}"
                    android:text="@={viewmodel.price.max}"
                    android:importantForAutofill="no" />

            </LinearLayout>

            <!-- DY -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fii_param_dy" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:maxWidth="50dp"
                    android:inputType="numberDecimal"
                    android:hint="@{mf.d2n(viewmodel.dy_limits.min)}"
                    android:text="@={viewmodel.dy.min}"
                    android:importantForAutofill="no" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/filter_range_to" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:maxWidth="50dp"
                    android:inputType="numberDecimal"
                    android:hint="@{mf.d2n(viewmodel.dy_limits.max)}"
                    android:text="@={viewmodel.dy.max}"
                    android:importantForAutofill="no" />

            </LinearLayout>

            <!-- DY12M -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fii_param_dy12m" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:maxWidth="50dp"
                    android:inputType="numberDecimal"
                    android:hint="@{mf.d2n(viewmodel.dy12m_limits.min)}"
                    android:text="@={viewmodel.dy12m.min}"
                    android:importantForAutofill="no" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/filter_range_to" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:maxWidth="50dp"
                    android:inputType="numberDecimal"
                    android:hint="@{mf.d2n(viewmodel.dy12m_limits.max)}"
                    android:text="@={viewmodel.dy12m.max}"
                    android:importantForAutofill="no" />

            </LinearLayout>

            <!-- VPA -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fii_param_vpa" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:maxWidth="50dp"
                    android:inputType="numberDecimal"
                    android:hint="@{mf.d2c(viewmodel.vpa_limits.min)}"
                    android:text="@={viewmodel.vpa.min}"
                    android:importantForAutofill="no" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/filter_range_to" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:maxWidth="50dp"
                    android:inputType="numberDecimal"
                    android:hint="@{mf.d2c(viewmodel.vpa_limits.max)}"
                    android:text="@={viewmodel.vpa.max}"
                    android:importantForAutofill="no" />

            </LinearLayout>

            <!-- PVPA -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fii_param_pvpa" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:maxWidth="50dp"
                    android:inputType="numberDecimal"
                    android:hint="@{mf.d2n(viewmodel.pvpa_limits.min)}"
                    android:text="@={viewmodel.pvpa.min}"
                    android:importantForAutofill="no" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/filter_range_to" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:maxWidth="50dp"
                    android:inputType="numberDecimal"
                    android:hint="@{mf.d2n(viewmodel.pvpa_limits.max)}"
                    android:text="@={viewmodel.pvpa.max}"
                    android:importantForAutofill="no" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</layout>